--- a/client/main.css
+++ b/client/main.css
@@ -24,3 +24,91 @@ button:hover {
 .buy:hover, .send:hover {
     background-color: #006ABD !important;
 }
+
+
+.autocomplete-wrapper {
+  position: relative;
+
+  input {
+    width: 100%;
+  }
+}
+
+.autocomplete-results {
+  position: absolute;
+  background: white;
+  z-index: 1;
+  top: 100%;
+  left: 0;
+  font-size: 13px;
+  border: solid 1px #ddd;
+  border-top-width: 0;
+  border-bottom-color: #ccc;
+  box-shadow:
+    0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.autocomplete-result {
+  padding: 12px 15px;
+  border-bottom: solid 1px #eee;
+  cursor: pointer;
+}
+
+.autocomplete-result:last-child {
+  border-bottom-width: 0;
+}
+
+.autocomplete-location {
+  opacity: .8;
+  font-size: smaller;
+}
+
+$iPlus: 0;
+@for $i from 0 through 7 {
+  $iPlus: $i + 1;
+  .autocomplete-results[data-highlight='#{$i}'] > :nth-child(#{$iPlus}) {
+    color: white;
+    background: #26C9FF;
+    border-bottom-color: #26C9FF;
+    outline: solid 1px darken(#26C9FF, 10%);
+  }
+}
+
+.vertical-divider {
+  position: absolute;
+  top: 55%;
+  left: 42%;
+  margin-top: 20px;
+  padding: 0;
+  width: auto;
+  line-height: 0;
+  text-align:center;
+}
+
+.vertical-divider:before,
+.vertical-divider:after {
+  position: absolute;
+  left: 55%;
+  content: '';
+  border-left: 1px solid rgba(34,36,38,.15);
+  border-right: 1px solid rgba(255,255,255,.1);
+  width: 0;
+  height: 100%;
+}
+
+.row-divided > .vertical-divider {
+  height: 80%;
+}
+
+.vertical-divider:before {
+  top: -100%;
+}
+
+.vertical-divider:after {
+  top: auto;
+  bottom: 0;
+}
+
+.row-divided {
+  position:relative;
+}
