--- a/client/main.css
+++ b/client/main.css
@@ -1,15 +1,26 @@
-button {
+.btn-info {
     background-color: #00A991 !important;
-    padding: 10px 15px !important;
+    padding: 5px 13px !important;
 }
 
-button:hover {
+.btn-info:hover {
     background-color: #009882 !important;
+}
+
+.btn-secondary {
+    color: #000000 !important;
+    background-color: #f5f7f9 !important;
+    padding: 5px 13px !important;
+    border: none !important;
+}
+
+.btn-secondary:hover {
+    background-color: #d9e1e8 !important;
 }
 
 .ibtnDel {
     background-color: #D21C1C !important;
-    padding: 5px 15px !important;
+    padding: 5px 13px !important;
 }
 
 .ibtnDel:hover {
@@ -77,7 +88,7 @@ $iPlus: 0;
 .vertical-divider {
   position: absolute;
   top: 55%;
-  left: 42%;
+  left: 41.5%;
   margin-top: 20px;
   padding: 0;
   width: auto;
