--- a/client/main.css
+++ b/client/main.css
@@ -108,7 +108,8 @@ $iPlus: 0;
 }
 
 .row-divided > .vertical-divider {
-  height: 80%;
+  height: 500px;
+  margin-top: 20px;
 }
 
 .vertical-divider:before {
